# softrware-

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt  보고서.md  업데이트.md
checkpoints/: autoencoder_seed42.pt  lenet_fgsm_at_seed123_best_val.pt  lenet_fgsm_at_seed123_last.pt  lenet_fgsm_at_seed2026_best_val.pt  lenet_fgsm_at_seed2026_last.pt  lenet_fgsm_at_seed42_best_val.pt  lenet_fgsm_at_seed42_last.pt  lenet_standard_seed123_best_val.pt  lenet_standard_seed123_last.pt  lenet_standard_seed2026_best_val.pt  lenet_standard_seed2026_last.pt  lenet_standard_seed42_best_val.pt  lenet_standard_seed42_last.pt
configs/: default.json
paper/: paper_outline.md
results/: environment.json  firewall_environment.json  firewall_run_config.json  run_config.json  summary.md
results/aggregated/: firewall_detection_summary.csv  firewall_results_summary.csv  model_summary.csv  pgd20_restart5_summary.csv  robustness_summary.csv  transferability_summary.csv
results/figures/: figure_index.md
results/raw/: adversarial_examples.pt  autoencoder_history.csv  clean_accuracy.csv  fgsm_robustness.csv  firewall_detection_scores.csv  (+6 more)
scripts/: __init__.py  build_simulation.py  build_visual_report.py  common.py  evaluate_firewall.py  evaluate_pgd.py  evaluate_pgd_strong.py  evaluate_robustness.py  plot_firewall_results.py  plot_results.py  run_firewall_pipeline.py  run_pipeline.py  run_transferability.py  smoke_test.py  train_autoencoder.py  train_models.py
tests/: test_attacks.py  test_autoencoder.py  test_firewall.py  test_metrics.py  test_models.py  test_simulation.py
(+18 files in other folders)
